Implement delete exercise
